aligned mobile search form for issue #83

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -1,6 +1,6 @@
 html,
 body {
-	font:12px/14px "Trebuchet MS",sans-serif;
+	font: 12px/14px "Trebuchet MS",sans-serif;
 	margin:0;
 	padding:0;
 	height:100%;
@@ -153,6 +153,13 @@ div#page{
 	}
 	.report_list .filter label{
 		margin-left: 10px;
+		display:block;
+		float:left;
+		width:80px;
+	}
+	.report_list .filter .searchbtn{
+		margin-left: 90px;
+		margin-top: 5px;
 	}
 
 /* Report View Page */
